test_translator/tests/data/checkpoint_2/errors/02_missing_counter_entrypoint/tests.py
from collections import Counter

assert count_chars("hello") == Counter({'l': 2, 'h': 1, 'e': 1, 'o': 1})
